support for PAP delta updates
Issue-ID: POLICY-3187
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: Ibb99232e605608571c02ccc1a84cf93e1de2c59f
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>