@@ -216,25 +216,25 @@ public class LifecycleFsmUpdateTest {
 
         // native controller policy - deploy
         // Delta: +controllerPolicy
-        assertTrue(fsm.update(getPdpUpdate(List.of(controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(controllerPolicy), List.of())));
         verifyActivePolicies(List.of(controllerPolicy));
         verifyDeployStats(1, 1, 0);
 
         // no policies - undeploy
-        // Delta: []
-        assertTrue(fsm.update(getPdpUpdate(Collections.emptyList())));
+        // Delta: -controllerPolicy
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(controllerPolicy))));
         verifyActivePolicies(Collections.emptyList());
         verifyDeployStats(2, 2, 0);
 
         // native controller + artifact policy (out of order) - deploy
         // Delta: +artifactPolicy, +controllerPolicy
-        assertTrue(fsm.update(getPdpUpdate(List.of(artifactPolicy, controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(artifactPolicy, controllerPolicy), List.of())));
         verifyActivePolicies(List.of(artifactPolicy, controllerPolicy));
         verifyDeployStats(4, 4, 0);
 
         // attempt to deploy opPolicy but invalid controller
         // Delta: +opPolicy
-        assertFalse(fsm.update(getPdpUpdate(List.of(artifactPolicy, opPolicy, controllerPolicy))));
+        assertFalse(fsm.update(getPdpUpdate(List.of(opPolicy), List.of())));
         assertEquals(1, PolicyControllerConstants.getFactory().inventory().size());
         assertFalse(fsm.getActivePolicies().contains(opPolicy));
         verifyExists(false, "lifecycle", List.of(opPolicy));
@@ -243,58 +243,58 @@ public class LifecycleFsmUpdateTest {
 
         // Delta: +opPolicy
         opPolicy.getProperties().remove("controllerName");
-        assertTrue(fsm.update(getPdpUpdate(List.of(artifactPolicy, opPolicy, controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy), List.of())));
         verifyExists(true, "lifecycle", List.of(opPolicy));
         verifyActivePolicies(List.of(opPolicy, artifactPolicy, controllerPolicy));
         verifyDeployStats(6, 5, 1);
 
         // Delta: -opPolicy
-        assertTrue(fsm.update(getPdpUpdate(List.of(artifactPolicy, controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(opPolicy))));
         assertFalse(PolicyControllerConstants.getFactory().get("lifecycle").getDrools().exists(opPolicy));
         verifyActivePolicies(List.of(controllerPolicy, artifactPolicy));
         verifyDeployStats(7, 6, 1);
 
         // Delta: -artifactPolicy
-        assertTrue(fsm.update(getPdpUpdate(List.of(controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(artifactPolicy))));
         assertFalse(PolicyControllerConstants.getFactory().get("lifecycle").getDrools().isBrained());
         verifyActivePolicies(List.of(controllerPolicy));
         verifyDeployStats(8, 7, 1);
 
         // Delta: -controllerPolicy
-        assertTrue(fsm.update(getPdpUpdate(Collections.emptyList())));
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(controllerPolicy))));
         assertThatIllegalArgumentException().isThrownBy(() -> PolicyControllerConstants.getFactory().get("lifecycle"));
         assertEquals(0, PolicyControllerConstants.getFactory().inventory().size());
         verifyActivePolicies(Collections.emptyList());
         verifyDeployStats(9, 8, 1);
 
         // Delta: +controllerPolicy, +artifactPolicy, and +opPolicy
-        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy, artifactPolicy, controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy, artifactPolicy, controllerPolicy), List.of())));
         verifyExists(true, "lifecycle", List.of(opPolicy));
         verifyActivePolicies(List.of(opPolicy, artifactPolicy, controllerPolicy));
         verifyDeployStats(12, 11, 1);
 
         // Delta: -artifactPolicy
-        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy, controllerPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(artifactPolicy))));
         assertEquals(1, PolicyControllerConstants.getFactory().inventory().size());
         assertFalse(PolicyControllerConstants.getFactory().get("lifecycle").getDrools().isBrained());
         verifyDeployStats(13, 12, 1);
 
         // Delta: +artifactPolicy
         // from deltas, all delta updates should be successfully applied
-        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy, controllerPolicy, artifactPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(artifactPolicy), List.of())));
         verifyExists(true, "lifecycle", List.of(opPolicy));
         verifyActivePolicies(List.of(opPolicy, artifactPolicy, controllerPolicy));
         verifyDeployStats(14, 13, 1);
 
         // Delta: -controllerPolicy
         // from deltas, all delta updates should be successfully applied
-        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy, artifactPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(controllerPolicy))));
         assertEquals(0, PolicyControllerConstants.getFactory().inventory().size());
         verifyDeployStats(15, 14, 1);
 
         // Delta: +controllerPolicy
         // from deltas, all delta updates should be successfully applied
-        assertTrue(fsm.update(getPdpUpdate(List.of(opPolicy, controllerPolicy, artifactPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(controllerPolicy), List.of())));
         verifyExists(true, "lifecycle", List.of(opPolicy));
         verifyActivePolicies(List.of(opPolicy, artifactPolicy, controllerPolicy));
         verifyDeployStats(16, 15, 1);
@@ -303,7 +303,16 @@ public class LifecycleFsmUpdateTest {
         // from deltas, all delta updates should be successfully applied
         op2Policy.getProperties().put("controllerName", "lifecycle");
         assertTrue(fsm.update(getPdpUpdate(
-                List.of(opPolicy, controllerPolicy, artifactPolicy, op2Policy, controller2Policy))));
+                List.of(op2Policy, controller2Policy), List.of())));
+        verifyExists(true, "lifecycle", List.of(opPolicy, op2Policy));
+        assertFalse(PolicyControllerConstants.getFactory().get("foo").getDrools().isBrained());
+        verifyActivePolicies(List.of(opPolicy, artifactPolicy, controllerPolicy, op2Policy, controller2Policy));
+        verifyDeployStats(18, 17, 1);
+
+        // same operation with duplicates - idempotent operation
+        op2Policy.getProperties().put("controllerName", "lifecycle");
+        assertTrue(fsm.update(getPdpUpdate(
+                List.of(op2Policy, controller2Policy, opPolicy), List.of(valPolicy, unvalPolicy))));
         verifyExists(true, "lifecycle", List.of(opPolicy, op2Policy));
         assertFalse(PolicyControllerConstants.getFactory().get("foo").getDrools().isBrained());
         verifyActivePolicies(List.of(opPolicy, artifactPolicy, controllerPolicy, op2Policy, controller2Policy));
@@ -311,9 +320,7 @@ public class LifecycleFsmUpdateTest {
 
         // Delta: +artifact2policy, +valPolicy, +unvalPolicy
         // from deltas, all delta updates should be successfully applied
-        assertTrue(fsm.update(getPdpUpdate(
-                List.of(opPolicy, controllerPolicy, artifactPolicy,
-                        op2Policy, controller2Policy, valPolicy, unvalPolicy, artifact2Policy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(valPolicy, unvalPolicy, artifact2Policy), List.of())));
         verifyExists(true, "lifecycle", List.of(opPolicy, op2Policy, valPolicy, unvalPolicy));
         verifyExists(true, "foo", List.of(valPolicy, unvalPolicy));
         verifyExists(false, "foo", List.of(opPolicy, op2Policy));
@@ -321,11 +328,9 @@ public class LifecycleFsmUpdateTest {
                 controller2Policy, valPolicy, unvalPolicy, artifact2Policy));
         verifyDeployStats(21, 20, 1);
 
-        // Delta: -artifact2Policy, +valPolicy
+        // Delta: -artifact2Policy, -unvalPolicy
         // from deltas, all delta updates should be successfully applied, and unvalPolicy disabled
-        assertTrue(fsm.update(getPdpUpdate(
-                List.of(opPolicy, controllerPolicy, artifactPolicy,
-                        op2Policy, controller2Policy, valPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(), List.of(artifact2Policy, unvalPolicy))));
         verifyExists(true, "lifecycle", List.of(opPolicy, op2Policy, valPolicy));
         verifyExists(false, "lifecycle", List.of(unvalPolicy));
         assertFalse(PolicyControllerConstants.getFactory().get("foo").getDrools().isBrained());
@@ -336,9 +341,7 @@ public class LifecycleFsmUpdateTest {
         // Delta: +artifact2Policy
         // from deltas, all delta updates should be successfully applied, opPolicy, op2Policy and unvalPolicy
         // should be reapplied.
-        assertTrue(fsm.update(getPdpUpdate(
-                List.of(opPolicy, controllerPolicy, artifactPolicy,
-                        op2Policy, controller2Policy, valPolicy, artifact2Policy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(artifact2Policy), List.of())));
         verifyExists(true, "lifecycle", List.of(opPolicy, op2Policy, valPolicy));
         verifyExists(false, "lifecycle", List.of(unvalPolicy));
         verifyExists(true, "foo", List.of(valPolicy));
@@ -347,10 +350,9 @@ public class LifecycleFsmUpdateTest {
                 controller2Policy, valPolicy, artifact2Policy));
         verifyDeployStats(24, 23, 1);
 
-        // Delta: -controllerPolicy, +artifactPolicy, +unvalPolicy
+        // Delta: -controllerPolicy, -artifactPolicy, +unvalPolicy
         // from deltas, all delta updates should be successful
-        assertTrue(fsm.update(getPdpUpdate(
-                List.of(opPolicy, op2Policy, controller2Policy, valPolicy, artifact2Policy, unvalPolicy))));
+        assertTrue(fsm.update(getPdpUpdate(List.of(unvalPolicy), List.of(controllerPolicy, artifactPolicy))));
         assertThatIllegalArgumentException().isThrownBy(() -> PolicyControllerConstants.getFactory().get("lifecycle"));
         verifyExists(true, "foo", List.of(valPolicy, unvalPolicy));
         verifyExists(false, "foo", List.of(opPolicy, op2Policy));
@@ -364,7 +366,8 @@ public class LifecycleFsmUpdateTest {
         // Delta: -opPolicy, -op2Policy, -controller2Policy, -valPolicy, -artifact2Policy, -unvalPolicy
         // from deltas, -opPolicy and -op2Policy undeploys will fail since there is not controller with that
         // policy type supported
-        assertFalse(fsm.update(getPdpUpdate(Collections.emptyList())));
+        assertFalse(fsm.update(getPdpUpdate(List.of(),
+                List.of(opPolicy, op2Policy, controller2Policy, valPolicy, artifact2Policy, unvalPolicy))));
         assertThatIllegalArgumentException().isThrownBy(() -> PolicyControllerConstants.getFactory().get("lifecycle"));
         assertThatIllegalArgumentException().isThrownBy(() -> PolicyControllerConstants.getFactory().get("foo"));
         assertEquals(0, PolicyControllerConstants.getFactory().inventory().size());
@@ -374,12 +377,14 @@ public class LifecycleFsmUpdateTest {
         fsm.shutdown();
     }
 
-    protected PdpUpdate getPdpUpdate(List<ToscaPolicy> policies) {
+    protected PdpUpdate getPdpUpdate(List<ToscaPolicy> policiesToDeploy, List<ToscaPolicy> policiesToUndeploy) {
         PdpUpdate update = new PdpUpdate();
         update.setName(NetworkUtil.getHostname());
         update.setPdpGroup("A");
         update.setPdpSubgroup("a");
-        update.setPolicies(policies);
+        update.setPolicies(List.of());
+        update.setPoliciesToBeDeployed(policiesToDeploy);
+        update.setPoliciesToBeUndeployed(fsm.getPolicyIds(policiesToUndeploy));
         return update;
     }
 
